[package]
name = "blog-api"
version = "0.1.0"
authors = ["蜂蜜実験室 <hachimi-lab@outlook.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.27"
